Fixed alignment error

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ button:hover {
     }
     .subscribe,
     footer h3,
-    p {
+    footer p {
         margin-left: 14%;
         font-size: 12vw;
     }
